apps/test-echo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-echo
spec:
  selector:
    app: test-echo
  ports:
    - name: http
      port: 80
      targetPort: http
