apps/test-echo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-echo
spec:
  ingressClassName: nginx
  rules:
    - host: test-new-cluster.rp-wow.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-echo
                port:
                  number: 80
